2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs : it is not IXmlNamespaceResolver anymore.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaValidatingReader.cs : XmlSchemaValidationFlags is updated.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs, XmlSchemaValidatingReader.cs,
	  XsdIdentityState.cs :
	  Dependent changes caused by XmlValueGetter changes.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs : XmlReader.ReadTypedValue() does not exist 
	  anymore, so it is not override.

2005-09-30  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs: make ParserContext and its NamespaceManager
	  optional. This is for NVDL xsd support.

2005-09-30  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs: allow validation for such XmlReader whose
	  ReadState is Interactive (hold different "is started" flag). This
	  is a fix for nvdl support.

2005-09-25  Atsushi Enomoto <atsushi@ximian.com>

	* XmlSchemaValidatingReader.cs: XmlSchemaValidationFlags updates.

2005-08-03  Gert Driesen <drieseng@users.sourceforge.net>

	* XsdValidationReader.cs: GetNamespacesInScope returns generic
	IDictionary in .NET 2.0 Beta 2.
	* XmlSchemaValidatingReader.cs: GetNamespacesInScope returns generic
	IDictionary in .NET 2.0 Beta 2.

2005-07-28  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs : when xsi:schemaLocation could not be
	  resolved, it still does not raise error when corresponding schema
	  already exists.

2005-05-05  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs :
	  removed atomicName related 2.0 members (deprecated in beta2).

2005-03-22  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs : removed unused method which was warned.

2004-12-22  Atsushi Enomoto <atsushi@ximian.com>

	* XsdValidatingReader.cs : XmlResolver.ResolveUri() may return null.

2004-12-16  Atsushi Enomoto <atsushi@ximian.com>
