@@ -1,0 +1,38 @@
+<?xml version="1.0" encoding="windows-1251"?>
+<xfw:configuration 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	xmlns:xfw="http://www.croc.ru/Schemas/XmlFramework/Core/Config/1.0" 
+	xmlns:xs="http://www.croc.ru/Schemas/XmlFramework/Core/Config/XStorageFactoryProvider/1.0" 
+
+	xsi:schemaLocation="
+		http://www.croc.ru/Schemas/XmlFramework/Core/Config/1.0 x-net-config-schema.xsd 
+		http://www.croc.ru/Schemas/XmlFramework/Core/Config/XStorageFactoryProvider/1.0 x-net-config-storage-factory-provider-schema.xsd
+	">
+	<xfw:core debug-mode="true"/>
+	<xfw:storage>
+		<xfw:connections 
+			storage-assembly="dgdfgfdg"
+			storage-class-name="dfgfdgdg"
+			>
+			<xfw:connection n="CommonConn" protected="1">
+				<xs:connection-string>
+					<xs:text>dfgdfg</xs:text>
+				</xs:connection-string>
+			</xfw:connection>
+			<xfw:connection n="ReadOnlyConn" protected="1">
+				<xs:connection-string>
+					<xs:text>dfgfgdfg</xs:text>
+				</xs:connection-string>
+			</xfw:connection>
+		</xfw:connections>
+	</xfw:storage>
+	<xfw:server-objects>
+		<xfw:file-name>fghfhfhg</xfw:file-name>
+	</xfw:server-objects>
+	<xfw:metadata>
+		<xfw:file-name>hfghfhg</xfw:file-name>
+	</xfw:metadata>
+	<AppData>
+		<AppVersion ver-major="1" ver-minor="0" build="0" /> 
+	</AppData>
+</xfw:configuration>
