@@ -1,0 +1,76 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<xsd:schema 
+	xmlns:xsd="http://www.w3.org/2001/XMLSchema" 
+	xmlns:ns1="http://www.croc.ru/Schemas/XmlFramework/Core/Config/XStorageFactoryProvider/1.0" 
+	targetNamespace="http://www.croc.ru/Schemas/XmlFramework/Core/Config/XStorageFactoryProvider/1.0" 
+	elementFormDefault="qualified"
+>
+	<xsd:annotation>
+		<xsd:documentation>Схема для описания содержимого узла {x-net-config-schema.xsd}:connection, 
+	используемое стандартным провайдером фабрик XStorage (XStorageFactoryProvider)
+	</xsd:documentation>
+	</xsd:annotation>
+	<xsd:element name="connection-string">
+		<xsd:complexType mixed="true">
+			<xsd:sequence>
+				<xsd:element name="secret" minOccurs="0" maxOccurs="unbounded">
+					<xsd:annotation>
+						<xsd:documentation>Описание секрета</xsd:documentation>
+					</xsd:annotation>
+					<xsd:complexType>
+						<xsd:simpleContent>
+							<xsd:extension base="xsd:string">
+								<xsd:attribute name="n" type="xsd:string" use="required">
+									<xsd:annotation>
+										<xsd:documentation>Наименование секрета</xsd:documentation>
+									</xsd:annotation>
+								</xsd:attribute>
+							</xsd:extension>
+						</xsd:simpleContent>
+					</xsd:complexType>
+				</xsd:element>
+				<xsd:element name="text" type="xsd:string">
+					<xsd:annotation>
+						<xsd:documentation>Текст строки соединения. Может содержать ссылки на значения секретов в виде @ + наименование_секрета</xsd:documentation>
+					</xsd:annotation>
+				</xsd:element>
+			</xsd:sequence>
+		</xsd:complexType>
+		<xsd:unique name="uniqueSecret">
+			<xsd:annotation>
+				<xsd:documentation>Наименования секретов должны быть уникальны</xsd:documentation>
+			</xsd:annotation>
+			<xsd:selector xpath="secret"/>
+			<xsd:field xpath="@n"/>
+		</xsd:unique>
+	</xsd:element>
+	<xsd:element name="params">
+		<xsd:complexType>
+			<xsd:sequence>
+				<xsd:element name="param" maxOccurs="unbounded">
+					<xsd:annotation>
+						<xsd:documentation>Описание параметра XStorageConnection</xsd:documentation>
+					</xsd:annotation>
+					<xsd:complexType>
+						<xsd:simpleContent>
+							<xsd:extension base="xsd:string">
+								<xsd:attribute name="n" type="xsd:string" use="required">
+									<xsd:annotation>
+										<xsd:documentation>Наименование параметра</xsd:documentation>
+									</xsd:annotation>
+								</xsd:attribute>
+							</xsd:extension>
+						</xsd:simpleContent>
+					</xsd:complexType>
+				</xsd:element>
+			</xsd:sequence>
+		</xsd:complexType>
+		<xsd:unique name="uniqueParam">
+			<xsd:annotation>
+				<xsd:documentation>Наименование параметра должно быть уникальным</xsd:documentation>
+			</xsd:annotation>
+			<xsd:selector xpath="param"/>
+			<xsd:field xpath="@n"/>
+		</xsd:unique>
+	</xsd:element>
+</xsd:schema>
