@@ -1,3 +1,8 @@
+2005-12-26  Atsushi Enomoto <atsushi@ximian.com>
+
+	* XsdValidatingReaderTests.cs : test for multi URLs in
+	  schemaLocation. Test by Vorobiev Maskim.
+
 2005-12-26  Gert Driesen <drieseng@users.sourceforge.net>
 
 	* XmlElementTests.cs: Fixed line endings.
