@@ -1,3 +1,11 @@
+2005-12-26  Atsushi Enomoto <atsushi@ximian.com>
+
+	* multi-schemaLocation.xml,
+	  x-net-config-storage-factory-provider-schema.xsd,
+	  x-net-config-schema.xsd :
+	  test support files for XsdValidatingReaderTests
+	  .MultipleSchemaInSchemaLocation() by Vorobiev Maskim.
+
 2004-01-03  Atsushi Enomoto <atsushi@ximian.com>
 
 	* Added 2,3,4,5 and 6.xsd
